--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --hot --open",
-    "build": "webpack"
+    "build": "webpack",
+    "build_pub": "set NODE_ENV=publish && npm run build",
+    "pub":
+      "git add dist && git commit -m \"publish fix\" && git push origin gh-pages"
   },
   "author": "",
   "license": "ISC"
